* Refactored code. Separated ucJni and ucThrift * Generic string type too easily switch between JNI and Thrift * Connection to UC framework via Thrift works. Events do not yet get notified.

--- a/Makefile.am
+++ b/Makefile.am
@@ -56,6 +56,8 @@ strace_SOURCES =	\
 	vsprintf.c	\
 	ucEvents.c 	\
 	ucLog.c 	\
+	ucJni.c 	\
+	ucThrift.c 	\
 	TPep2Pdp.cpp \
 	Types_types.cpp \
 	Types_constants.cpp \
